Fix page stretching

--- a/src/scss/layout/page.scss
+++ b/src/scss/layout/page.scss
@@ -1,8 +1,8 @@
 .page-layout {
   position: relative;
+  flex: 1 0 auto;
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
   overflow: hidden;
   
   &::after {
